# aoc2024

./: .gitignore  Cargo.toml
benches/: benchmarks.rs
day-01/: main.rs
day-03/: main.rs
day-04/: main.rs
day_02/: main.rs
day_03/: main.rs
day_04/: main.rs
src/day_01/: mod.rs
src/day_02/: mod.rs
src/day_03/: mod.rs
src/day_04/: mod.rs
src/day_05/: mod.rs
src/day_06/: mod.rs  part2.rs
src/day_07/: mod.rs
src/day_08/: part1.rs  part2.rs
src/day_09/: mod.rs  part1.rs  part2.rs
src/day_10/: part1.rs  part2.rs
src/day_11/: part1.rs  part2.rs
src/day_12/: part1.rs  part2.rs
src/day_13/: part1.rs  part2.rs
src/day_14/: part1.rs  part2.rs
src/day_15/: part1.rs
src/exec/: day_02.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs
