[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d01"
path = "src/bin/day_01.rs"

[[bin]]
name = "d02"
path = "src/bin/day_02.rs"

[[bin]]
name = "d03"
path = "src/bin/day_03.rs"

[[bin]]
name = "d04"
path = "src/bin/day_04.rs"

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"

[dependencies]
regex = "1.11.1"

[dev-dependencies]
divan = "0.1.16"
