[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d01"
path = "src/exec/day_01.rs"
test = false

[[bin]]
name = "d02"
path = "src/exec/day_02.rs"
test = false

[[bin]]
name = "d03"
path = "src/exec/day_03.rs"
test = false

[[bin]]
name = "d04"
path = "src/exec/day_04.rs"
test = false

[[bin]]
name = "d05"
path = "src/exec/day_05.rs"
test = false

[[bin]]
name = "d06"
path = "src/exec/day_06.rs"
test = false

[[bin]]
name = "d07"
path = "src/exec/day_07.rs"
test = false


[[bin]]
name = "d08"
path = "src/exec/day_08.rs"
test = false

[[bin]]
name = "d09"
path = "src/exec/day_09.rs"
test = false

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"

[dependencies]
anyhow = "1.0.94"
num-bigint = "0.4.6"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.1.0"

[dev-dependencies]
divan = "0.1.16"
